--- a/style.css
+++ b/style.css
@@ -1,8 +1,27 @@
 html {
-    background-color: #a3db9a;
-    font-family: Libre Franklin;
+    background-color: #ffe8e8;
+    font-family: 'Press Start 2P', cursive;
 }
+
+body {
+    color: #4dd0e1;
+}
+
+.one {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+}
+
 h1 {
+    font-size: 3.7em;
+}
+
+#gendermin {
+    font-size: 1.4em;
+}
+
+/* h1 {
     display: block;
     margin-right: auto;
     margin-left: auto;
@@ -22,7 +41,7 @@ h1 {
 #gendermin {
     margin-top: 10px;
     margin-bottom: 10px;
-}
+} */
 h2 {
     margin-left: 30px;
     font-size: 24pt;
