--- a/style.css
+++ b/style.css
@@ -21,6 +21,18 @@ h1 {
     font-size: 1.4em;
 }
 
+p, li {
+    line-height: 130%;
+}
+
+p, a {
+    padding-left: 2%;
+}
+
+a {
+    color: inherit;
+}
+
 /* h1 {
     display: block;
     margin-right: auto;
@@ -46,4 +58,28 @@ h2 {
     margin-left: 30px;
     font-size: 24pt;
     text-decoration: underline;
+}
+
+@media only screen and (max-width: 900px) {
+    .yas {
+        width: 140%;
+    }
+
+    ul {
+        width: 100%;
+    }
+
+    .one {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
+    .sned-help {
+        padding-left: 5%;
+    }
+
+    h1 {
+        font-size: 5em;
+    }
 }
