WHY WONT U WORK

--- a/style.css
+++ b/style.css
@@ -33,6 +33,12 @@ a {
     color: inherit;
 }
 
+.GIFt {
+ 
+    margin: 0;
+    padding: 0;
+}
+
 /* h1 {
     display: block;
     margin-right: auto;
