--- a/style.css
+++ b/style.css
@@ -1,20 +1,22 @@
 html {
-    background-color: #3AD562;
+    background-color: #FDC5F5;
     font-family: 'Press Start 2P', cursive;
 }
 
 body {
-    color: #DAF7A6;
+    color: #4DD0E1;
 }
 
 .navbar {
     list-style-type: none;
     background-color: #4DD0E1;
+    padding: 1em;
 }
 
 .navlist {
     display: inline;
-    margin: 2em;
+    text-decoration: none;
+    padding: 1em;
     color: #FDC5F5;
     text-align: right;
 }
