--- a/style.css
+++ b/style.css
@@ -4,19 +4,22 @@ html {
 }
 
 body {
-    color: #4DD0E1;
+    color: #4dd0e1;
 }
 
 .navbar {
     list-style-type: none;
     background-color: #4DD0E1;
-    padding: 1em;
+    padding: 1.5em;
 }
 
 .navlist {
     display: inline;
-    text-decoration: none;
     padding: 1em;
+}
+
+.navlist a {
+    text-decoration: none;
     color: #FDC5F5;
     text-align: right;
 }
