--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
 
 body {
     color: #4dd0e1;
+    margin: 0em;
 }
 
 nav {
@@ -15,6 +16,8 @@ nav {
     list-style-type: none;
     background-color: #4DD0E1;
     padding: 1.5em;
+    padding-left: 10em;
+    margin-top: 0em;
 }
 
 .navlist {
@@ -29,6 +32,7 @@ nav {
 
 .navlist a:hover {
     background-color: #ffe8e8;
+    padding: 1.5em;
 }
 
 .one {
